# Simple-Api-Flask-SQLite

./: README.md  pyproject.toml
instance/: :memory
src/: app.py  usuarios_ejemplo.py
src/blueprints/: blueprints_users.py
src/models/: users_model.py
src/services/: database.py
